--- a/war/circuitjs.html
+++ b/war/circuitjs.html
@@ -111,13 +111,15 @@
     <!-- produced by the GWT compiler in the module output directory -->
     <!-- or generated automatically in development mode.             -->
     <script language="javascript" src="circuitjs1/circuitjs1.nocache.js"></script>
+
+    <!-- Include a history iframe to enable full GWT history support -->
+    <!-- (the id must be exactly as shown)                           -->
+    <iframe src="javascript:''" id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
     <script>
   	function getFieldText (fld) {
-  		console.log ("GetFieldText: ", fld, window.opener.document.querySelector ('[name="' + fld + '"]').value);
   		return (window.opener.document.querySelector ('[name="' + fld + '"]').value);
   	}
   	function setFieldText (fld, val) {
-  		console.log ("SetFieldText: ", fld, val);
   		window.opener.document.querySelector ('[name="' + fld + '"]').value = val
   	}
 	</script>
