--- a/war/index.html
+++ b/war/index.html
@@ -42,7 +42,7 @@
 			g 352 432 352 496 0
 			R 544 256 544 224 0 0 40 5 0 0 0.5
 			w 544 256 352 256 0
-			r 352 256 352 432 0 1000`
+			r 352 256 352 432 0 1000`;
 		document.querySelector('[name="circuit_text2"]').value = `
 		$ 0 0.000005 382.76258214399064 50 5 50
 		r 512 160 512 272 0 100000
@@ -50,10 +50,9 @@
 		w 240 400 512 400 0
 		v 240 400 240 160 0 0 40 5 0 0 0.5
 		s 240 160 384 160 0 1 false
-		w 384 160 512 160 0`
+		w 384 160 512 160 0`;
 		
-    	initWindow("1")
-		initWindow("2")
+		["1", "2"].forEach (initWindow)	// i got lazy
     </script>
 </body>
 </html>
